Added Matt Room and the WARPs

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
    "Name": "Eddsworld_Village",
-   "Author": "Martiitale & Aleixastez",
+   "Author": "Martiitale & DaniPraivet",
    "Version": "1.20.0",
    "Description": "Adds Tom as an NPC in Stardew Valley.",
    "UniqueID": "EddsWorld",
